Semester 5 (Depresi Musiman)/Tugas/JARKOM/JARKOM - TUGAS 1 - ALDEN LUTHFI - 2206028932/A01_2206028932_firewall.json
[
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "53"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "53"
        ]
      }
    ],
    "creationTimestamp": "2024-08-26T17:25:19.277-07:00",
    "description": "allow ingress DNS traffic",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5975439847121265152",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-dns",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/allow-dns",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "allow-dns"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "8932"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "8932"
        ]
      }
    ],
    "creationTimestamp": "2024-08-27T07:05:55.372-07:00",
    "description": "allow unique port traffic",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5826366334050526124",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-unique",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/allow-unique",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "allow-unique"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2024-08-26T17:37:30.210-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4236245209142305061",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-http",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-http",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "http-server"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "443"
        ]
      }
    ],
    "creationTimestamp": "2024-08-26T17:37:30.235-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "426336311073349925",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-https",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-https",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "https-server"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2024-08-26T17:21:55.050-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7357760700378292940",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2024-08-26T17:21:54.856-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1970240358061220557",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2024-08-26T17:21:54.983-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "6180685841592001229",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2024-08-26T17:21:54.920-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4132594209337156301",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/compnet-2206028932/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  }
]
